# algorithm-py

./: Makefile  pyproject.toml
.circleci/: config.yml
src/: binary_search.py  sorted_collection.py  two_pointers.py
src/graph/: base.py  bfs.py
tests/: test_binary_search.py  test_sorted_collections.py  test_two_pointers.py
tests/graph/: test_base.py  test_bfs.py
