[tool.poetry]
name = "algorithm-py"
version = "0.1.0"
description = ""
authors = ["kitagawa-hr <kitagawa@cancerscan.jp>"]

[tool.poetry.dependencies]
python = "^3.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
mypy = "^0.700.0"
pytest = "^4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
